<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KpFun</string>
    <string name="action_settings">Settings</string>
    <string name="register"><u><b>New Account</b></u></string>
    <string name="back_to_login"><u><b>Back to login</b></u></string>
    <string name="restaurant_rewards">Restaurant Rewards</string>
    <string name="personal_rewards">Gifts &amp; Rewards</string>    
    <string name="restaurant_search">Restaurant Search</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_btn">Register</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="connect">Connect</string>
    <string name="rewards">Rewards</string>
    <string name="more">More</string>
    <string name="get_rewarded">Claim Reward</string>
    <string name="get_ad_view">Button Text</string>
    <string name="friend_bonus">Tasty Sample</string>
    <string name="add_friend">+ Add Friends</string>
    <string name="next">Next</string>
    <string name="add_friends">Friends</string>
    <string name="add_photo">Add Photo</string>
    <string name="personal_message">Personal Message...</string>
    <string name="add_a_picture">Personalize your gift with a message!</string>
    <string name="send">Send to Friends &amp; Claim Rewards</string>
    <string name="gifts">Gifts</string>
    <string name="sample_text">Send your friends this free tasty sample!</string>
    <string name="reward_directions">Present this to your waiter or the manager to redeem your KpFun Member Reward. Please tip appropriately on original bill before deductions.</string>
    <string name="gift_directions">Present this to your waiter or the manager to redeem your KpFun Tasty Sample. </string>
    
    <string name="social_connect">Social Connect</string>    
    <string name="purchase_membership">Purchase Membership</string>
    <string name="visit_website">Visit Website</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit_keeper">Exit Keeper</string>
    
    
     <string name="connect_to_facebook">Connect to Facebook</string>
     <string name="login_to_facebook">Login to Facebook</string>
     <string name="logout_with_facebook">Logout with Facebook</string>
     <string name="share_with_facebook">Share with Facebook</string>
     
     
     
     <!-- GCM -->
     <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
     <!-- end GCM -->
    <string name="app_id">641360709231346</string>
    <string name="fb_connect">Connect with Facebook</string>
    <string name="logout">Logout</string>

</resources>