<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Layout title -->

    <TextView
        style="@style/SetTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/friend_bonus" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#222222"
        android:orientation="vertical" >
    </LinearLayout>

    <!-- Layout Logo Image Logo, Restaurant name, Restaurant Address -->

	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1" >
		
		<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        
        android:orientation="vertical" >
        
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@drawable/shape_corner_layout"
	            android:gravity="center" >
	
	          
	            <!--
	                  ImageView
	                android:id="@+id/ivLogoDetail"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:background="@drawable/loader"
	                android:gravity="center" /
	            -->
					
	            <RelativeLayout
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:background="@color/black" >
	            <ImageView
	                android:id="@+id/ivLogoSharing"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:adjustViewBounds="true"
	                android:background="@drawable/loader" />
	            <ImageView
			        android:id="@+id/black_gradient"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignBottom="@+id/ivLogoSharing"
			        android:layout_alignLeft="@+id/ivLogoSharing"
			        android:layout_alignRight="@+id/ivLogoSharing"
			        android:layout_alignParentBottom="true"
			        android:background="@drawable/black_gradient" />
	            <TextView
	                android:id="@+id/tvTitleBonus"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:gravity="center|left"
	                android:text="Free Breadsticks!"
	                android:textColor="#ffffff"
	                android:textSize="24dp"
	                android:paddingLeft="5dp"
	        		android:paddingRight="5dp"
	                android:textStyle="bold" 
	                android:layout_alignBottom="@+id/ivLogoSharing"
		        	android:layout_alignLeft="@+id/ivLogoSharing"
		        	android:layout_alignRight="@+id/ivLogoSharing"
		        	android:layout_alignTop="@+id/black_gradient"/>
	            </RelativeLayout>
	
	        </LinearLayout>

            <TextView
                android:id="@+id/nothing"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center|left"
                android:paddingBottom="20dp"
                android:text="@string/sample_text"
                android:textColor="#ffffff"
                android:paddingLeft="5dp"
        		android:paddingRight="5dp"
  				android:textStyle="bold"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
        		android:paddingRight="5dp"
                android:orientation="horizontal" >

                

                    <ImageView
                        android:id="@+id/btnAddPhoto"
                        android:layout_width="95dp"
                        android:layout_height="95dp"
                        android:background="@drawable/shape_text_corner_buttom"
                        android:src="@drawable/add_photo"
                        android:textColor="#000000" />
                

                <EditText
                    android:id="@+id/txtMessage"
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/shape_format_text"
                    android:gravity="top|left|center_vertical"
                    android:hint="@string/personal_message"
                    android:paddingLeft="10dp"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="70dp"
	    android:layout_marginTop="10dip"
	    android:layout_weight="0.1"
	    android:background="@color/black_gray" >

	    <LinearLayout
	        android:layout_width="10dip"
	        android:layout_height="match_parent" >
	    </LinearLayout>

	    <Button
	        android:id="@+id/btnSend"
	        style="@style/SetButton_1"
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:layout_weight="0.05"
	        android:text="@string/send" />

	    <LinearLayout
	        android:layout_width="10dip"
	        android:layout_height="match_parent" >
	    </LinearLayout>
	</LinearLayout>

</LinearLayout>