<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/keeper_background" >

    <LinearLayout
        android:id="@+id/layout_socialBeforeConnect"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_socialConnect"
            style="@style/SetTitle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/social_connect" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="Connect on"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Facebook"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/facebook_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dip"
                        android:gravity="center"
                        android:text="Earn points, rewards"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="and more!"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp" />

                    <ImageButton
                        android:id="@+id/btn_loginFacebook"
                        android:layout_width="250dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="30dip"
                        android:layout_marginRight="30dip"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_facebook_button" />

                    <!--
                         <View
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/keeper_background" />
                    -->
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!-- Layout after connect facebook -->

    <LinearLayout
        android:id="@+id/layout_socialAfterConnect"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="invisible" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_afterConnectToFacebook"
                style="@style/SetTitle"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/connect_to_facebook" />

            <ImageView
                android:id="@+id/iv_backScreenSocialConnect"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_back_screen" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_corner_layout" >

                        <ImageView
                            android:id="@+id/pic_facebook"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="2dp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_facebookNameOfUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_shareFacebook"
                        style="@style/SetButtonLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/share_with_facebook" />

                    <Button
                        android:id="@+id/btn_logoutFacebook"
                        style="@style/SetButtonLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/logout_with_facebook" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>